add commonWin.h, modify partB.bash commonwin.c partA.c

--- a/a1/makefile
+++ b/a1/makefile
@@ -29,13 +29,13 @@ endif
 
 all: $(Target)
 
-partA1.exe: ptA1.o
-	  $(CC) $(CFLAGS) -o partA1.exe partA1.o
+partA1.exe: ptA1.o commonWin.o
+	  $(CC) $(CFLAGS) -o partA1.exe partA1.o commonWin.os
 	  
 partA1.o: partA1.c
 	$(CC) $(CFLAGS) -c partA1.c -I.
 	
-partA2: partA2.o
+partA2: partA2.o 
 	 $(CC) $(CFLAGS) -o partA2 partA1.o $(UBCL) $(UBCI) -m$(BITZ)
 	 
 partA2.o: partA2.c
