--- a/a1/a1-phase3/makefile
+++ b/a1/a1-phase3/makefile
@@ -4,7 +4,8 @@
 
 ARCH=$(shell uname -m)
 UNAME_S=$(shell uname -s)
-DIR= /student/cmpt332/pthreads
+DIR= pthreads
+#DIR= /student/cmpt332/pthreads
 LIBNAME=pthreads
 
 #UBC
@@ -35,25 +36,28 @@ partA1.exe: partA1.o commonWin.o
 partA1.o: partA1.c
 	$(CC) $(CFLAGS) -c partA1.c -I.
 	
-partA2: partA2.o commonWin.o
-	 $(CC) $(CFLAGS) -o partA2 partA2.o commonWin.o $(UBCL) $(UBCI) -m$(BITZ)
+partA2: partA2.o common.o
+	 $(CC) $(CFLAGS) -o partA2 partA2.o common.o $(UBCL) $(UBCI) -m$(BITZ)
 	 
 partA2.o: partA2.c
 	$(CC) $(CFLAGS) $(UBCL) -c partA2.c -I. $(UBCI) -m$(BITZ)
 	
-partA3: partA3.o commonWin.o
-	 $(CC) $(CFLAGS) -o partA3 partA3.o commonWin.o $(UBCL) $(UBCI) -m$(BITZ)
+partA3: partA3.o common.o
+	 $(CC) $(CFLAGS) -o partA3 partA3.o common.o $(UBCL) $(UBCI) -m$(BITZ)
 	 
 partA3.o: partA3.c
 	$(CC) $(CFLAGS) $(UBCL) -c partA3.c -I. $(UBCI) -m$(BITZ)
 
-partA4: partA4.o commonWin.o
-	 $(CC) $(CFLAGS) -o partA4 partA4.o commonWin.o
+partA4: partA4.o common.o
+	 $(CC) $(CFLAGS) -o partA4 partA4.o common.o
 
 partA4.o: partA4.c
 	$(CC) $(CFLAGS) -c partA4.c
 
 commonWin.o: commonWin.c
 	  $(CC) $(CFLAGS) -c commonWin.c
+
+common.o: common.c
+	  $(CC) $(CFLAGS) -c common.c
 clean:
 	  rm -f *.o $(Target)
